
Package org.springframework.osgi.util
* BundleDelegatingClassLoader constructor visibility changed from private to protected

Package org.springframework.osgi.web
* change package of the internal, private bundle activator
* added OsgiWarDeploymentException to the deployment interfaces
* added WarDeployment for bundles deployed by the WarDeployer
* added WarDeploymentContext for accessing the properties associated with a war deployment
* improved cleanup in case of exceptions for both TomcatWarDeployer and JettyWarDeployer


Changes in version 1.1.0 M1 (2008-04-07)
-----------------------------------------

General
* Knopflerfish 2.0.4+ required
* Felix 1.0.3+ required
* introduced new module dedicated to web application running on OSGi platforms
  (successfully tested on Equinox 3.2.2 and the upcoming Felix 1.0.4)

Package org.springframework.osgi.context
* AbstractDelegatedExecutionApplicationContext calls "cancelRefresh" if exceptions appear during the delegeted refresh
* introduced events specific to OSGi application contexts
* introduced listener interface OsgiBundleApplicationContextListener for OSGi context events
* added bundle version to the application context OSGi service

Package org.springframework.osgi.extender
* ContextLoaderListener automatically detects and notifies OSGi services registered as 
  OsgiBundleApplicationContextListener classes
* ContextLoaderListener can be configured externally through META-INF/spring/*.xml files from fragments attached to its
  bundle

Package org.springframework.osgi.io
* added support for classpath: and classpath*: patterns

Package org.springframework.osgi.test
* FelixPlatform uses the Felix distribution default system packages
* KnopflerfishPlatform uses the KF distribution default system packages
* AbstractOnTheFlyBundleCreatorTests can now generate imports based on all classes available in the jar not just the 
  test hierarchy

Package org.springframework.osgi.util